# lucidpulls

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  claude.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_indexes.py  0003_add_bug_description.py  0004_add_rejected_fixes.py
src/: __init__.py  config.py  main.py  models.py  scheduler.py  utils.py
src/analyzers/: __init__.py  base.py  code_analyzer.py  issue_analyzer.py
src/database/: __init__.py  history.py  models.py
src/git/: __init__.py  pr_creator.py  rate_limiter.py  repo_manager.py
src/llm/: __init__.py  azure.py  base.py  nanogpt.py  ollama.py
src/notifications/: __init__.py  base.py  discord.py  teams.py
tests/: __init__.py  test_analyzers.py  test_config.py  test_database.py  test_git.py  test_github_integration.py  test_integration.py  test_llm.py  test_main.py  test_notifications.py  test_production_readiness.py  test_scheduler.py  test_utils.py
